add image folder

--- a/index.html
+++ b/index.html
@@ -1,50 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasha Tudor</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
     <main id="main">
-        <header id="main-header">
-            <h1 id="title">Tasha Tudor</h1>
-            <p><b>(1915-2008)</b></p>git push origin master
-            <p>Children's book Illustrator</p>
-            <p>Friend to Nature</p>
+        <header id="main header">
+        <h1 id="title">Tasha Tudor</h1>
+        <p><b>(1915-2008)</b></p>
+        <p>Children's book Illustrator</p>
+        <p>Friend to Nature</p>
         </header>
 
         <section id="img-div">
-            <img id="image" src="./Images/Tasha-tudor_parrot.jpg" alt="Tasha is drawing">
-
-            <div id="img-caption">"If one advances confidently in the direction of his dreams, and endeavors to live the
-                life which he has imagined, he will meet with a success unexpected in common hours."
-                <cite>Henry David Thoreau</cite>
+            <img id="image" src="./Images/Tasha-tudor_parrot.jpg" alt="Tasha with parrot">
+        
+            <div id="img-caption">"If one advances confidently in the direction of his dreams, and endeavors to live the life which he has imagined, he will meet with a success unexpected in common hours."
+            <cite>Henry David Thoreau</cite> 
             </div>
         </section>
 
         <section id=tribute-info>
-            <p>Famous picture book illustrator and author Tasha Tudor loved the old ways of country living and payment
-                for her beautiful work allowed her to live the life she dreamed of. She dressed in clothes styled for
-                the 19th century that she made herself and carried a handmade willow basket to do her grocery shopping.
-                Tasha kept goats, chickens, Corgi dogs, as well as a garden full of herbs, flowers, and the sort of
-                tasty fruits that would find their way into homemade pies cooked on her wood stove. These things she
-                loved and made a part of her illustrations.</p>
-            <p>Whilst in her early twenties, Tasha married and began to raise a family. Her husband encouraged her
-                efforts to get her work published and after many rejections, Pumpkin Moonshine became the first of her
-                many books that celebrate days of long ago. As a newlywed and young mother, Tasha insisted on living as
-                close to the old ways as possible which meant no running water, no electricity, and no store-bought
-                clothes or baked goods. Instead of going to the movies or listening to the radio, her children worked in
-                the gardens, took care of the animals, helped in the kitchen, and put on plays with dolls and
-                marionettes. Holidays were celebrated in an old-fashioned way. The Thanksgiving turkey was cooked in a
-                roaster by the hearth.</p>
-            <p>Her old-fashioned sensibility never went out of style. Tasha’s illustrations were gathered into museum
-                exhibitions but also graced Christmas cards, stationery and, of course, children’s books. Tasha’s work
-                and indeed her life became popular with so many that after her death her house and gardens still attract
-                visitors from across the world.</p>
+            <p>Famous picture book illustrator and author Tasha Tudor loved the old ways of country living and payment for her beautiful work allowed her to live the life she dreamed of. She dressed in clothes styled for the 19th century that she made herself and carried a handmade willow basket to do her grocery shopping. Tasha kept goats, chickens, Corgi dogs, as well as a garden full of herbs, flowers, and the sort of tasty fruits that would find their way into homemade pies cooked on her wood stove. These things she loved and made a part of her illustrations.</p>
+            <p>Whilst in her early twenties, Tasha married and began to raise a family. Her husband encouraged her efforts to get her work published and after many rejections, Pumpkin Moonshine became the first of her many books that celebrate days of long ago. As a newlywed and young mother, Tasha insisted on living as close to the old ways as possible which meant no running water, no electricity, and no store-bought clothes or baked goods. Instead of going to the movies or listening to the radio, her children worked in the gardens, took care of the animals, helped in the kitchen, and put on plays with dolls and marionettes. Holidays were celebrated in an old-fashioned way. The Thanksgiving turkey was cooked in a roaster by the hearth.</p>
+            <p>Her old-fashioned sensibility never went out of style. Tasha’s illustrations were gathered into museum exhibitions but also graced Christmas cards, stationery and, of course, children’s books. Tasha’s work and indeed her life became popular with so many that after her death her house and gardens still attract visitors from across the world.</p>
 
             <h3>Fast Facts on Tasha Tudor</h3>
             <ul>
@@ -56,19 +38,14 @@
                 <li>She died June 18, 2008, in Marlboro, Vermont</li>
 
             </ul>
-            <h4>If you are interested please read more on her
-                <a id="tribute-link" href="https://en.wikipedia.org/wiki/Tasha_Tudor" target="_blank"> Wikipedia
-                    entry</a>.
+            <h4>If you are interested please read more on her 
+                <a id="tribute-link" href="https://en.wikipedia.org/wiki/Tasha_Tudor" target="_blank"> Wikipedia entry</a>.
             </h4>
 
         </section>
 
     </main>
 
-
+    
 </body>
-
 </html>
-
-
-
